infrastructure/kubernetes/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-api
  annotations:
    external-dns.alpha.kubernetes.io/hostname: api.staging.portfolio.example.com
spec:
  tls:
    - hosts:
        - api.staging.portfolio.example.com
      secretName: portfolio-api-stg-cert
  rules:
    - host: api.staging.portfolio.example.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: portfolio-api
                port:
                  number: 80
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: portfolio-api
                port:
                  number: 9090
